--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@lucia-auth/adapter-prisma": "^4.0.1",
+    "@node-rs/argon2": "^2.0.2",
     "@prisma/client": "^5.21.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -26,6 +27,7 @@
     "@tiptap/pm": "^2.5.9",
     "@tiptap/react": "^2.5.9",
     "@tiptap/starter-kit": "^2.5.9",
+    "@typescript-eslint/parser": "^8.21.0",
     "@uploadthing/react": "^6.7.2",
     "arctic": "^1.9.2",
     "class-variance-authority": "^0.7.0",
@@ -34,11 +36,11 @@
     "ky": "^1.5.0",
     "lucia": "^3.2.0",
     "lucide-react": "^0.427.0",
-    "next": "15.0.0-rc.0",
+    "next": "15.1.6",
     "next-themes": "^0.3.0",
-    "react": "19.0.0-rc-f994737d14-20240522",
+    "react": "18.2.0",
     "react-cropper": "^2.3.3",
-    "react-dom": "19.0.0-rc-f994737d14-20240522",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.52.2",
     "react-image-file-resizer": "^0.4.8",
     "react-intersection-observer": "^9.13.0",
@@ -54,8 +56,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.0-rc.0",
+    "eslint": "^9.19.0",
+    "eslint-config-next": "15.1.6",
     "eslint-config-prettier": "^9.1.0",
     "postcss": "^8",
     "prettier": "^3.3.3",
